--- a/ios/MapsApp/Info.plist
+++ b/ios/MapsApp/Info.plist
@@ -34,7 +34,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>RCTNewArchEnabled</key>
-	<false/>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -49,5 +49,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Ionicons.ttf</string>
+	</array>
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>Necesito tu ubicacion para mostrar el mapa</string>
+  <key>NSLocationTemporaryUsageDescriptionDictionary</key>
+  <dict>
+    <key>YOUR-PURPOSE-KEY</key>
+    <string>Necesito tu ubicacion para mostrar el mapa</string>
+  </dict>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Necesito tu ubicacion para mostrar el mapa</string>
 </dict>
 </plist>
